# IAVis

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: find_deps.cmake
include/iavis/: definitions.hpp  iavis.hpp
libauxid/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
libauxid/.github/workflows/: ci.yaml
libauxid/cmake/: auxid_setup_project.cmake
libauxid/cmake/toolchains/: arm64-linux-clang.cmake  arm64-windows-clang.cmake  wasm32-emscripten-clang.cmake  x64-linux-clang.cmake  x64-windows-clang.cmake  x64-windows-cross-clang.cmake
libauxid/include/auxid/: auxid.hpp  pch.hpp  result.hpp
libauxid/include/auxid/containers/: hash_base.hpp  hash_map.hpp  hash_set.hpp  option.hpp  pair.hpp  ring_buffer.hpp  ring_buffer_view.hpp  span.hpp  spsc_queue.hpp  string.hpp  vec.hpp
libauxid/include/auxid/memory/: allocator.hpp  arc.hpp  arena.hpp  box.hpp  heap.hpp
libauxid/include/auxid/thread/: cond_var.hpp  mutex.hpp  thread.hpp
libauxid/include/auxid/utils/: test.hpp
libauxid/src/: CMakeLists.txt
libauxid/src/cpp/: auxid.cpp  logger.cpp
libauxid/tests/: CMakeLists.txt
libauxid/tests/cpp/: main.cpp
libauxid/tests/cpp/containers/: hash_map.cpp  hash_set.cpp  option.cpp  pair.cpp  string.cpp  vec.cpp
libauxid/tests/cpp/core/: result.cpp
libauxid/tests/cpp/memory/: arena.cpp  heap.cpp
libauxid/tests/cpp/thread/: thread.cpp
sandbox/: CMakeLists.txt
sandbox/cpp/: main.cpp
src/: CMakeLists.txt
src/cpp/: iavis.cpp
src/cpp/backends/vulkan/: backend.cpp  device.cpp  instance.cpp  swapchain.cpp
src/cpp/vulkan/: device.cpp  instance.cpp  swapchain.cpp
src/hpp/: base.hpp  context.hpp  vulkan_impl.hpp
src/hpp/backends/: backend.hpp
src/hpp/backends/vulkan/: backend.hpp
tests/cpp/: main.cpp  sample_test.cpp
